fixes #36 Added text-overflow: ellipsis and file name as on hover text

--- a/geoparser_app/static/css/style.css
+++ b/geoparser_app/static/css/style.css
@@ -211,3 +211,10 @@ hr {
   min-width:auto;
   width:100%;
 }
+
+.name{
+    text-overflow: ellipsis;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+}
